feat(reflect): type distance evaluate